# first_api

./: .gitignore  README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: django.yml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
books/: admin.py  models.py  urls.py  views.py
firstapi/: asgi.py  settings.py  urls.py  wsgi.py
render/: index.html
